# prepwise

./: .env.example  GEMINI_SETUP.md  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx
app/(auth)/: layout.tsx
app/(root)/: layout.tsx  page.tsx
app/(root)/interview/: page.tsx
app/api/generate-questions/: route.ts
app/api/interviews/: route.ts
components/: Agent.tsx  AuthForm.tsx  DisplayTechIconsClient.tsx  InterviewCard.tsx  InterviewCardClient.tsx  InterviewModal.tsx  LogoutButton.tsx  ThemeToggle.tsx
components/ui/: button.tsx
gmail_pubsub_listener/: main.py  pyproject.toml
lead_finder/: main.py  pyproject.toml
lead_manager/: pyproject.toml
sdr/: pyproject.toml
ui_client/: main.py  pyproject.toml
