[project]
name = "lead-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.3",
    "deprecated>=1.2.18",
    "google-adk>=1.12.0",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
