[project]
name = "sdr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.3",
    "bs4>=0.0.2",
    "deprecated>=1.2.18",
    "elevenlabs>=2.13.0",
    "google-adk>=1.13.0",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-aiplatform>=1.111.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "pydantic>=2.11.7",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "starlette>=0.47.3",
    "twilio>=9.7.2",
    "uvicorn>=0.35.0",
    "vertexai>=1.43.0",
]
