[project]
name = "ui-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.4",
    "black>=25.1.0",
    "click>=8.2.1",
    "deprecated>=1.2.18",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mypy>=1.17.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]
